Rework resize bar to resolve issue with dragging over iframe Hide horizontal overflow

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -10,6 +10,7 @@ body {
   grid-template-rows: 1fr 20fr;
   grid-template-columns: auto 1em 1fr;
   height: 100%;
+  overflow-x: hidden;
 }
 
 #menu-bar {
